--- a/public/popup.html
+++ b/public/popup.html
@@ -5,6 +5,10 @@
   <script src="dist/popup.js" defer></script>
 </head>
 <body>
-  <button id="clear-urls">Clear Visited URLs</button>
+  
+
+
+
+  <!-- <button id="clear-urls">Clear Visited URLs</button> -->
 </body>
 </html>
